# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_binary")

rt_ipynb_binary(
    name = "colab_scratchpad",
    srcs = ["colab_scratchpad.ipynb"],
)
