# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//tools/rt/python:defs.bzl", "rt_py_test")

bzl_library(
    name = "environ",
    srcs = ["environ.bzl"],
)

rt_py_test(
    name = "install_html_meta_data",
    srcs = ["install_html_meta_data.py"],
    args = ["--read_only"],
    data = [
        "footer.html.in",
        "header.html.in",
        "//:html",
    ],
)

# The following test is *not hermetic*.  I am using PWD (obtained in
# WORKSPACE.bazel) to pass in the source directory here since 
# BUILD_WORKSPACE_DIRECTORY is not available during bazel test.
load("@environ//:environ.bzl", "PWD")
rt_py_test(
    name = "check_html_links_exist",
    srcs = ["check_html_links_exist.py"],
    args = [
        "--cwd",
        PWD,
    ],
    data = [
        "//:html",
    ],
)
