# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_binary", "rt_ipynb_test")


rt_ipynb_test(
    name = "perching",
    timeout = "moderate",
    srcs = ["perching.ipynb"],
    data = ["//underactuated/models/glider"],
    deps = ["//underactuated"],
)

rt_ipynb_test(
    name = "trajopt",
    timeout = "moderate",
    srcs = ["trajopt.ipynb"],
    data = ["//underactuated/models:cartpole.urdf"],
    tags = ["requires-network"],  # For gurobi license.
    deps = [
        "//underactuated",
        "//underactuated:pendulum",
    ],
)

