# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//tools/rt/jupyter:defs.bzl", "rt_ipynb_test")
load("//tools/rt/python:defs.bzl", "rt_py_library")

rt_ipynb_test(
    name = "mathematical_program_examples_ipynb",
    srcs = ["mathematical_program_examples.ipynb"],
)

rt_py_library(
    name = "underactuated",
    srcs = [
        "__init__.py",
        "jupyter.py",
        "multibody.py",
        "plot_utils.py",
        "pyplot_visualizer.py",
        "utils.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

rt_py_library(
    name = "pendulum",
    srcs = ["pendulum.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = ["underactuated"],
)

rt_py_library(
    name = "quadrotor2d",
    srcs = ["quadrotor2d.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = ["underactuated"],
)