# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@pip_deps//:requirements.bzl", "requirement")
load("//book/htmlbook/tools/python:defs.bzl", "rt_py_library")

exports_files(
    [
        "package.xml",
    ],
    visibility = ["//visibility:public"],
)

rt_py_library(
    name = "underactuated",
    srcs = [
        "__init__.py",
        "jupyter.py",
        "multibody.py",
        "plot_utils.py",
        "pyplot_utils.py",
        "scenarios.py",
        "utils.py",
    ],
    data = [
        "package.xml",
        "@drake_models",
    ],
    deps = [
      requirement("drake"),
      requirement("ipython"),
      requirement("matplotlib"),
      requirement("mpld3"),
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

rt_py_library(
    name = "double_integrator",
    srcs = ["double_integrator.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = ["underactuated"],
)

rt_py_library(
    name = "meshcat_utils",
    srcs = ["meshcat_utils.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
      "underactuated",
      requirement("ipywidgets"),
    ],
)

rt_py_library(
    name = "optimizers",
    srcs = ["optimizers.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
)

rt_py_library(
    name = "pendulum",
    srcs = ["pendulum.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = ["underactuated"],
)

rt_py_library(
    name = "quadrotor2d",
    srcs = ["quadrotor2d.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = ["underactuated"],
)

rt_py_library(
    name = "uav_environment",
    srcs = ["uav_environment.py"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
      "underactuated",
      requirement("lxml"),
      requirement("scipy"),
    ],
)