# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "acrobot",
    srcs = ["acrobot.ipynb"],
    data = ["//underactuated/models:cartpole.urdf"],
    flaky = True,
    tags = ["requires-network"], # to download drake-models
    deps = [
        "//underactuated",
        "//underactuated:meshcat_utils",
        "//underactuated:quadrotor2d",
    ],
)
