# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "basketball",
    srcs = ["basketball.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "rimless_wheel",
    srcs = ["rimless_wheel.ipynb"],
    deps = [
      "//underactuated",
    ],
)

# Waiting for Hybrid TrajOpt to land in Drake.
#rt_ipynb_test(
#    name = "hybrid",
#    srcs = ["hybrid.ipynb"],
#    deps = [
#      "//underactuated",
#    ],
#)
