# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/python:requirements.bzl", "requirement")
load("//book/htmlbook/tools/python:defs.bzl", "rt_py_test")

rt_py_test(
    name = "stereographic",
    srcs = ["stereographic.py"],
    deps = [
      requirement("matplotlib"),
    ],
)

rt_py_test(
    name = "vanderpol_staircase",
    srcs = ["vanderpol_staircase.py"],
    deps = [
      requirement("drake"),
      requirement("matplotlib"),
    ],
)

exports_files(
    ["rrt_voronoi.swf"],
    visibility = ["//visibility:public"],
)
