# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_binary", "rt_ipynb_test")


rt_ipynb_test(
    name = "littledog",
#    timeout = "moderate",
    srcs = ["littledog.ipynb"],
    data = ["//underactuated/models/littledog"],
    deps = ["//underactuated"],
)

# TODO(russt): Need to prefetch spot_ros2 assets for bazel
#rt_ipynb_test(
#    name = "spot",
#    srcs = ["spot.ipynb"],
#    data = ["//underactuated/models/spot"],
#    deps = ["//underactuated"],
#)

# TODO(russt): Waiting for drake PR #21305 to merge.
#rt_ipynb_test(
#    name = "zmp_planner",
#    srcs = ["zmp_planner.ipynb"],
#    deps = ["//underactuated"],
#)
