# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@pip_deps//:requirements.bzl", "requirement")
load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

# Need to PR missing python bindings
# rt_ipynb_test(
#    name = "acrobot_w_encoders",
#    srcs = ["acrobot_w_encoders.ipynb"],
#    deps = [
#        "//underactuated",
#    ],
#)
