# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@pip_deps//:requirements.bzl", "requirement")
load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "quadrotor_in_wind",
    srcs = ["quadrotor_in_wind.ipynb"],
    deps = [
        "//underactuated",
        "//underactuated:quadrotor2d",
    ],
)
